10.5.x.x (relative to 10.5.9.0)
========



10.5.9.x (relative to 10.5.8.0)
========

Improvements
------------

- USDScene : `hasBound()` and `readBound()` now use `UsdGeomModelAPI` extents hints if they are available. This behaviour can be disabled by setting the `IECOREUSD_USE_MODELAPI_BOUNDS` environment variable to a value of `0`.

10.5.8.0 (relative to 10.5.7.1)
========

Improvements
------------

- IECoreUSD::DataAlgo : Added binding for `toUSD()` function.

Fixes
-----

- ShaderNetworkAlgo : Fixed crash caused by cyclic connections in `removeUnusedShaders()`.
- ShaderStateComponent : Fixed GL rendering failures caused by unsupported values for texture parameters.
- USDScene :
  - Fixed exceptions caused by attempt to write shader parameters with unsupported value types.
  - Fixed duplicate loading of `arnold:*` primvars on lights as attributes. These are now only loaded as parameters on the light shader.
- IECoreUSD::DataAlgo : Fixed exceptions thrown by `toUSD()` and `valueTypeName()` when passed datatypes not supported by `dispatch()`. An empty VtValue or SdfValueTypeName is now returned instead.

Build
-----

- CI : Updated to GafferHQ/dependencies 8.0.1.

10.5.7.1 (relative to 10.5.7.0)
========

Fixes
-----

- USDScene :
  - Adding mapping of `arnold:*` light parameters to and from the non-standard `primvars:arnold:*` attributes preferred by the `arnold-usd` project.
  - Fixed writing of `treatAsPoint` and `treatAsLine` light parameters, which were being written as generic `inputs:*` attributes and not the specific
    attributes defined by the SphereLight and CylinderLight schemas.

10.5.7.0 (relative to 10.5.6.2)
========

Features
--------

- MeshPrimitive : Added `interpolateBoundary`, `faceVaryingLinearInterpolation` and `triangleSubdivisionRule` properties for controlling the shape of the subdivision limit surface.

Fixes
-----
